# spartan-resilience-framework

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTROLS_MATRIX.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRINCIPLES.md  README.md  RELEASE-GUARD.md  ROADMAP.md  SECURITY.md  SPEC-1-SUMMARY.md  SUPPORT.md  WEBHOOK_IDEMPOTENCY.md  demo_webhook_idempotency.py  index.html  mkdocs.yml  pyproject.toml  release-drafter.yml  requirements.txt  sbom.json  sitemap.xml
.github/: CODEOWNERS  LABELS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: my-SPARTAN.md  my-agent.md
.github/workflows/: SECURITy.md  auto-merge.yml  aws-drift-sentinel.yml  azure-drift-sentinel.yml  ci.yml  deploy-docs.yml  deploy.yml  drift-sentinel.yml  gcp-drift-sentinel.yml  leonidex_audit.yml  longevity-ci.yml  publish-pypi.yml  publish-with-token.yml  pyproject.toml  qpprime-autoreport.yml  qpprime-ci.yml  security.yml  sync-labels.yml  terraform-pr-gate.yml  terraform.yml
EVALS/: README.md
POLICY/: README.md
Qp_mod5_note/: index.html
accord/: index.html
apps/: README.md
apps/chatgpt-app/: README.md
apps/control-plane/: Dockerfile  README.md  __init__.py
apps/longevity-service/: Dockerfile  README.md  __init__.py  requirements.txt
apps/web-shell/: README.md
apps/workers/: README.md
codex/: README.md  requirements.txt
codex/config/: tiers.yaml
codex/docs/: PILOT_QUICKSTART.md  STATEMENT_OF_WORK.md  scroll_format.md
codex/src/: __init__.py  run_sim.py
data/: small_mersenne_exponents.txt
docs/: FINOPS_INTEGRATION.md  GCP_IAM_POLICY_MANAGEMENT.md  NEXT_STEPS_SHOWCASE.md  Qp_mod5_note.md  RUNBOOK_Payments_Webhooks.md  SPEC-1-AI-APP-AUTO-PUBLISH.md  SPEC-1-QUICK-START.md  SPEC-1-TECHNICAL-ARCHITECTURE.md  accord.md  index.md  laws.md  roadmap.md  training.md  training_recovered.md
docs/report/: Qp_mod5_summary.md  Qp_summary.csv  mod5-law.md
github-action/: README.md  action.yml
infra/: .env.example  README.md  compose.yaml  init.sql  main.tf  validate_policies.sh  variables.tf
laws/: index.html
report/: Qp_mod5_summary.md  Qp_summary.csv
roadmap/: index.html
scripts/: run_analysis.py  test-terraform-attestation.sh
search/: search_index.json
serverless/: README.md  cloud_run_main.py
slides/: Presentation_S.pptx
tests/: index.html  test_codex.py  test_control_plane.py  test_leonidex_audit.py  test_longevity_service.py  test_qp.py  test_security.py  test_telemetry.py
training/: index.html
training_backup/: index.html
training_backup_20250822_1544/: index.html
training_recovered/: index.html
(+51 files in other folders)
